# parallel_MonteCarlo_for_fun

./: .~lock.partitioning_estimator_for_algorithm.ods#  CMakeLists.txt  LICENSE  README.md  main.cpp  mainMonteCarlo.cpp  mainMonteCarloTest.cpp  partitioning_estimator_for_algorithm.ods
include/: EvaluateSolutiontest.cpp  IO_write.hpp  IntersectionDetection2D.hpp  MPIcomm.hpp  RNG.hpp  WoStrMonteCarlo.hpp  WoStrMonteCarloClass.hpp  blockHyperMesh.hpp  dualNumber.hpp  globalMacros.hpp  localVectorAlgebra.hpp  partitioner.hpp  test.cpp
include/IO/: paraview_writer.hpp  simple_paraview_writer.hpp
include/Random/: RNG.hpp  RandomSampling.hpp  RandomVectors.hpp  WoStrMonteCarlo.hpp
include/boundary/: BVHpoints.hpp  IntersectionDetection2D.hpp  boundary.hpp  boundaryQueries.hpp  closestBoundaryPoint.hpp  localVectorAlgebra.hpp
include/templatedGeometry/: geometricPrimitives.hpp  localVectorAlgebra.hpp
include/templatedMaths/: tCmath.hpp  tErfGammaFuncs.hpp  tExpLogFuncs.hpp  tHypFuncs.hpp  tOtherFuncs.hpp  tPowFuncs.hpp  tTrigFuncs.hpp
include/templatedMaths/tParser/: functionParsedMap.hpp  tCParser.hpp  tokeniser.hpp
problemOperators/: poissonGreenFunction.hpp  poissonGreenFunctionOperator2D.hpp
